[project]
name = "antithesis-sdk"
version = "0.1.1"
description = "Antithesis SDK for Python"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = ["cffi"]
keywords = ["antithesis", "sdk", "autonomous", "testing"]

[tool.setuptools]
package-dir = {"" = "src"}
# packages = ["baseclasses", "elements"]
py-modules = ["use_voidstar"] # dash, not underscore

[project.entry-points."distutils.setup_keywords"]
cffi_modules = "build_voidstar.py:ffibuilder"
# cffi_modules = "cffi.setuptools_ext:cffi_modules"

[tool.black]
verbose = true

[tool.mypy]
files = "src/*.py"

[tool.pylint.messages_control]
# disable = "C0114,C0115,C0116"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython", "cffi"]
build-backend = "setuptools.build_meta"

[project.scripts]

# version 
version = "assertions:cmd_version"

# always "message text" t t f t f 
always = "assertions:cmd_always"

# sometimes "message text" t t f t f 
sometimes = "assertions:cmd_sometimes"

# addx 10 17
addx = "assertions:add"

# subx 100 31
subx = "assertions:sub"

# [tool.pydeploy]
# exclude_libs = []

