[project]
name = "antithesis-sdk"
version = "0.1.6"
description = "Antithesis SDK for Python"
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["antithesis", "sdk", "autonomous", "testing"]

[tool.black]
verbose = true

[tool.mypy]
files = "src/antithesis_sdk/*.py"
disable_error_code = "import-untyped, import-not-found"

[tool.pylint.messages_control]
# disable = "C0114,C0115,C0116"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython", "cffi"]
build-backend = "setuptools.build_meta"

[project.scripts]

# always "message text" t t f t f 
always = "antithesis_sdk.assertions:_cmd_always"

# sometimes "message text" t t f t f 
sometimes = "antithesis_sdk.assertions:_cmd_sometimes"

# addx 10 17
addx = "antithesis_sdk.assertions:_add"

# randomx
randomx = "antithesis_sdk.random:_cmd_get_random"

# eventx
eventx = "antithesis_sdk.lifecycle:_cmd_event"

# setup
setupx = "antithesis_sdk.lifecycle:_cmd_setup"
