[project]
name = "antithesis"
version = "0.1.7"
description = "Antithesis SDK for Python"
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["antithesis", "sdk", "autonomous", "testing"]

[tool.black]
verbose = true

[tool.mypy]
files = "src/antithesis/*.py"
disable_error_code = "import-untyped, import-not-found"

[tool.pylint.messages_control]
# disable = "C0114,C0115,C0116"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython", "cffi"]
build-backend = "setuptools.build_meta"
